# dotfiles

./: .gitignore  README.md  _gitignore_global  _vimrc  _zshrc  init-macos.sh  init-ubuntu-server.sh  init-ubuntu.sh  init.sh
_config/alfred/: Modern - Small.alfredappearance  Shortcuts.alfredworkflow
_config/ccstatusline/: session-tokens.js  settings.json
_config/ghostty/: config
_config/neovide/: config.toml  cycle-windows.sh
_config/nvim/: README.md  init.lua
_config/nvim/lua/config/: autocmds.lua  envs.lua  keymaps.lua  options.lua
_config/nvim/lua/plugins/: Untitled  ai.lua  cmdline.lua  color.lua  edgy.lua  editor.lua  file_explorer.lua  fzf.lua  git.lua  lint.lua  lsp.lua  markdown.lua  mini.lua  python.lua  treesitter.lua  utilities.lua
_config/p10k/: p10k.zsh
_config/tmux/: nord-theme.conf  onedark-theme.conf  open-url-at-cursor.sh  tmux.conf
_config/tmux/plugins/tmux-fzf-links/: README.md  fzf-links.tmux
_config/tmux/plugins/tmux-fzf-links/tmux-fzf-links-python-pkg/tmux_fzf_links/: __main__.py  configs.py  default_schemes.py  errors_types.py  fzf_handler.py  opener.py  schemes.py
_config/tmux/plugins/tokyo-night-tmux/: tokyo-night.tmux
_config/tmux/plugins/tokyo-night-tmux/src/: session-widget.sh
_config/wezterm/: wezterm.lua  wezterm_open_url.lua
_config/zathura/: zathura-pbcopy.sh  zathurarc  zathurarc-base  zathurarc-dracula
_venvs/cuda/: .env  README.md  pyproject.toml
_venvs/default/: pyproject.toml
_venvs/gpu-cloud-base/: pyproject.toml
_venvs/huggingface/: pyproject.toml
_venvs/nvim/: README.md  init.sh  pyproject.toml
_venvs/vllm/: pyproject.toml
