[project]
name = "cuda"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "vllm",
    "trl",
    # above dependencies (manually added to prevent removal during sync)
    "setuptools-scm>=9.2.2",
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets==3.6.0",
    "evaluate>=0.4.6",
    "faiss-cpu>=1.13.2",
    "flash-attn>=2.8.3",
    "flashinfer-python",
    "fp-quant>=0.3.2",
    "huggingface>=0.0.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "ninja>=1.13.0",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "nvidia-cudnn-cu13>=9.13.0.50",
    "openai-harmony>=0.0.8",
    "outlines-core",
    "peft>=0.18.0",
    "pip>=25.3",
    "qutlass>=0.0.0",
    "ray>=2.48",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "scikit-learn>=1.8.0",
    "seqeval>=1.2.2",
    "tiktoken>=0.12.0",
    "torch==2.9.1",
    "torchaudio>=2.9.1",
    "torchvision==0.24.1",
    "transformers[sentencepiece]>=4.57.3",
    "wandb>=0.23.1",
    "xgrammar>=0.1",
    "zstandard>=0.25.0",
    "nvidia-cusparselt-cu13>=0.8.0",
    "tensorboardx>=2.6.4",
    "imgcat>=0.6.0",
    "trackio>=0.15.0",
    "pycuda>=2026.1",
    "num2words>=0.5.14",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
vllm = { git = "https://github.com/vllm-project/vllm.git", rev = "357d435c5" }
trl = { git = "https://github.com/huggingface/trl.git" }

[tool.uv]
preview = true
environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
