[project]
name = "default"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.7",
    "jupyterlab-lsp>=5.2.0",
    "jupytext>=1.17.3",
    "nvitop>=1.6.1",
    "pip>=25.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
]
